# icquai-server

./: Cargo.toml  README.md
js/: index.mjs  package-lock.json  package.json
js/public/: index.html
src/: lib.rs
