[package]
name = "icquai-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519 = "1.5"
serde_json = "1.0"
base64 = "0.13"
ed25519-dalek = "1.0"
tokio = { version = "1", features = ["full"] }
tungstenite = "*"
tokio-tungstenite = "*"
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3"
env_logger = "0.9"
